...
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/statistics_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                <TextView
...
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_no_tasks"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="@{viewmodel.empty ? View.VISIBLE : View.GONE}" />

                <TextView
                    android:id="@+id/stats_active_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="1dp"
                    android:text="@{@string/statistics_active_tasks(viewmodel.activeTasksPercent)}"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}" />
...
